{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 136,
  "lineage": "efa2229b-ae1d-9ef0-a236-30562594b6ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab04-eip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad2a67bfff5d76d0",
            "association_id": "eipassoc-01de6288af59cf772",
            "domain": "vpc",
            "id": "eipalloc-0ad2a67bfff5d76d0",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-099304f92b1a0bd95",
            "private_dns": "ip-10-0-1-48.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-13-215-9-157.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.9.157",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab04-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:internet-gateway/igw-08cba40df955a7ccf",
            "id": "igw-08cba40df955a7ccf",
            "owner_id": "848587260896",
            "tags": {
              "Name": "lab04-igw"
            },
            "tags_all": {
              "Name": "lab04-igw"
            },
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab04-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:loadbalancer/app/lab04-alb/e065fe44761a31ca",
            "arn_suffix": "app/lab04-alb/e065fe44761a31ca",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab04-alb-371833669.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:loadbalancer/app/lab04-alb/e065fe44761a31ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab04-alb",
            "security_groups": [
              "sg-066216de7f40df91d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0130236fc26b0e228"
              },
              {
                "subnet_id": "subnet-0f2ab689f6e813967"
              }
            ],
            "subnets": [
              "subnet-0130236fc26b0e228",
              "subnet-0f2ab689f6e813967"
            ],
            "tags": {
              "Environment": "PRD"
            },
            "tags_all": {
              "Environment": "PRD"
            },
            "vpc_id": "vpc-04f16a3525021cd89",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.lab04-secgroup-1",
            "aws_security_group.lab04-secgroup-2",
            "aws_subnet.lab04-public-subnet-1",
            "aws_subnet.lab04-public-subnet-2",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab04-alb-front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener/app/lab04-alb/e065fe44761a31ca/8f0dc5cc5ac9b684",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/0bf39ba644a3d37d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener/app/lab04-alb/e065fe44761a31ca/8f0dc5cc5ac9b684",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:loadbalancer/app/lab04-alb/e065fe44761a31ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab04-alb",
            "aws_lb_target_group.lab04-alb-target-group",
            "aws_security_group.lab04-secgroup-1",
            "aws_security_group.lab04-secgroup-2",
            "aws_subnet.lab04-public-subnet-1",
            "aws_subnet.lab04-public-subnet-2",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lab04-alb-listener-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/0bf39ba644a3d37d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener-rule/app/lab04-alb/e065fe44761a31ca/8f0dc5cc5ac9b684/86acf1d6260537c1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener-rule/app/lab04-alb/e065fe44761a31ca/8f0dc5cc5ac9b684/86acf1d6260537c1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener/app/lab04-alb/e065fe44761a31ca/8f0dc5cc5ac9b684",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab04-alb",
            "aws_lb_listener.lab04-alb-front_end",
            "aws_lb_target_group.lab04-alb-target-group",
            "aws_security_group.lab04-secgroup-1",
            "aws_security_group.lab04-secgroup-2",
            "aws_subnet.lab04-public-subnet-1",
            "aws_subnet.lab04-public-subnet-2",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab04-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/0bf39ba644a3d37d",
            "arn_suffix": "targetgroup/lab04-alb-target-group/0bf39ba644a3d37d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/0bf39ba644a3d37d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lab04-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab04-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad2a67bfff5d76d0",
            "connectivity_type": "public",
            "id": "nat-0e1b407a2d0c17b96",
            "network_interface_id": "eni-099304f92b1a0bd95",
            "private_ip": "10.0.1.48",
            "public_ip": "13.215.9.157",
            "subnet_id": "subnet-0f2ab689f6e813967",
            "tags": {
              "Name": "lab04-natgw"
            },
            "tags_all": {
              "Name": "lab04-natgw"
            }
          },
          "dependencies": [
            "aws_eip.lab04-eip-nat",
            "aws_internet_gateway.lab04-igw",
            "aws_subnet.lab04-public-subnet-1",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab04-rt-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-06f3bd3815fa0a8b3",
            "id": "rtb-06f3bd3815fa0a8b3",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e1b407a2d0c17b96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab04-rt-private-2"
            },
            "tags_all": {
              "Name": "lab04-rt-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.lab04-natgw",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab04-rt-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-0b6b26c3899823fcf",
            "id": "rtb-0b6b26c3899823fcf",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08cba40df955a7ccf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab04-rt-public-1"
            },
            "tags_all": {
              "Name": "lab04-rt-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab04-igw",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab04-route-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e54c91ce6eff811",
            "route_table_id": "rtb-0b6b26c3899823fcf",
            "subnet_id": "subnet-0f2ab689f6e813967"
          },
          "dependencies": [
            "aws_internet_gateway.lab04-igw",
            "aws_route_table.lab04-rt-public-1",
            "aws_subnet.lab04-public-subnet-1",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab04-route-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6e7283c319d014e",
            "route_table_id": "rtb-0b6b26c3899823fcf",
            "subnet_id": "subnet-0130236fc26b0e228"
          },
          "dependencies": [
            "aws_internet_gateway.lab04-igw",
            "aws_route_table.lab04-rt-public-1",
            "aws_subnet.lab04-public-subnet-2",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab04-route-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7a0b23796d2f53",
            "route_table_id": "rtb-06f3bd3815fa0a8b3",
            "subnet_id": "subnet-0d20a3927a6de3c44"
          },
          "dependencies": [
            "aws_eip.lab04-eip-nat",
            "aws_internet_gateway.lab04-igw",
            "aws_nat_gateway.lab04-natgw",
            "aws_route_table.lab04-rt-private-2",
            "aws_subnet.lab04-private-subnet-1",
            "aws_subnet.lab04-public-subnet-1",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab04-route-assoc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8b6bb76f3f029d",
            "route_table_id": "rtb-06f3bd3815fa0a8b3",
            "subnet_id": "subnet-0077f48acdecd93b6"
          },
          "dependencies": [
            "aws_eip.lab04-eip-nat",
            "aws_internet_gateway.lab04-igw",
            "aws_nat_gateway.lab04-natgw",
            "aws_route_table.lab04-rt-private-2",
            "aws_subnet.lab04-private-subnet-2",
            "aws_subnet.lab04-public-subnet-1",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab04-secgroup-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:security-group/sg-05d1afd076fb1ae8a",
            "description": "Allow web server network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d1afd076fb1ae8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTP from anywhere, through the ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "180.190.52.180/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab04-secgroup-1",
            "name_prefix": "",
            "owner_id": "848587260896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab04-secgroup-1"
            },
            "tags_all": {
              "Name": "lab04-secgroup-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab04-secgroup-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:security-group/sg-066216de7f40df91d",
            "description": "Allow ALB network traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05d1afd076fb1ae8a"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066216de7f40df91d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab04-secgroup-2",
            "name_prefix": "",
            "owner_id": "848587260896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab04-secgroup-1"
            },
            "tags_all": {
              "Name": "lab04-secgroup-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab04-secgroup-1",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab04-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-0d20a3927a6de3c44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d20a3927a6de3c44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "lab04-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab04-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-0077f48acdecd93b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0077f48acdecd93b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "lab04-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab04-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-0f2ab689f6e813967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2ab689f6e813967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab04-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-0130236fc26b0e228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0130236fc26b0e228",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-04f16a3525021cd89"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab04-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:vpc/vpc-04f16a3525021cd89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f12ad33b53cc652",
            "default_route_table_id": "rtb-021412b379c656f4d",
            "default_security_group_id": "sg-0f779889e220a03b9",
            "dhcp_options_id": "dopt-7f272c18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04f16a3525021cd89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021412b379c656f4d",
            "owner_id": "848587260896",
            "tags": {
              "Name": "lab04-vpc"
            },
            "tags_all": {
              "Name": "lab04-vpc"
            }
          }
        }
      ]
    }
  ]
}